deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: hydroid-website

spec:
  replicas: 2

  selector:
    matchLabels:
      app: hydroid-website

  template:

    metadata:
      labels:
        app: hydroid-website

    spec:

      containers:

      - name: hydroid-website

        image: hydroidacr123.azurecr.io/hydroid-website:latest

        imagePullPolicy: Always

        ports:

        - containerPort: 80
