service.yaml
apiVersion: v1
kind: Service

metadata:
  name: hydroid-service

spec:

  selector:
    app: hydroid-website

  ports:

  - port: 80
    targetPort: 80

  type: LoadBalancer
