ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: hydroid-ingress

spec:
  ingressClassName: nginx

  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: hydroid-service
            port:
              number: 80
